# z3

./: .env  .env.example  .gitignore  README.md  docker-compose.regtest.yml  docker-compose.yml  verify-routing.sh
.cursor/rules/: docker-compose-configuration-guidelines.mdc  z3_docker_orchestration.mdc  z3_gitignore_config_rules.mdc  z3_security_and_networking.mdc  z3_service_zaino.mdc  z3_service_zallet.mdc  z3_service_zebra.mdc
.github/workflows/: build-z3-images.yaml  ci.yaml  sub-build-docker-image.yaml
config/: zallet.toml  zallet.toml.default
config/grafana/dashboards/: zebra.json
config/regtest/: zallet.toml.default
config/zaino/: zindexer.toml
docs/: docker-architecture.md  regtest.md
observability/: README.md
observability/jaeger/: README.md
observability/prometheus/: prometheus.yaml
regtest/: README.md  docker-compose.yml  init.sh
regtest/config/: zaino.toml  zallet.toml  zallet_identity.txt
rpc-router/: Cargo.toml  Dockerfile  README.md  z3_merged.json
rpc-router/regtest/: README.md  docker-compose.yml  init.sh
rpc-router/regtest/config/: zallet.toml
rpc-router/src/: defaults.rs  integration_tests.rs  main.rs  tests.rs  unit_tests.rs
scripts/: regtest-init.sh  setup-network.sh
