[package]
name = "rpc-router"
description = "Z3 RPC request router"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
http-body-util = "0.1"
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
